# adloop

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml.example  pyproject.toml
.claude/commands/: analyze-performance.md  competitor-check.md  create-ad.md  diagnose-tracking.md  historico.md  monthly-report.md  optimize.md  v4-check.md  weekly-report.md
.cursor/rules/: adloop.mdc
src/adloop/: __init__.py  __main__.py  auth.py  cli.py  config.py  server.py
src/adloop/ads/: client.py  gaql.py  read.py  write.py
src/adloop/ga4/: client.py  reports.py  tracking.py
src/adloop/safety/: audit.py  guards.py  preview.py
tests/: test_config.py  test_safety_guards.py
